[package]
name = "pcy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.19"
curl = "0.4.44"
indicatif = "0.17.5"
reqwest = {version = "0.11.18", features = ["blocking", "json"]}
serde = {version="1.0.176", features = ["derive"]}
toml = "0.7.6"
